# agent_one

./: .sample_env  README.md  app.py  azure-pipelines.yml  pyproject.toml  report.md  requirements.txt
src/agent_one/: crew.py  main.py
static/: script.js  style.css
templates/: index.html
