[project]
name = "agent_one"
version = "0.1.0"
description = "agent-one using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
agent_one = "agent_one.main:run"
run_crew = "agent_one.main:run"
train = "agent_one.main:train"
replay = "agent_one.main:replay"
test = "agent_one.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
